[#241] - Apañar endpoint /treatments (#242)
* [#241] - Apañar endpoint /treatments

* [#241] - Arreglar front

* [#241] - Arreglar tests
